objects/ASI_CRM_Visitation_Plan_Setup__c.object
<CustomObject>
    <description>For VN CRM</description>
    <fields>
        <fullName>ASI_CRM_City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Province__c</fullName>
        <label>Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Sales_Target_Factor__c</fullName>
        <inlineHelpText>Number of visitation plan target generated per working day</inlineHelpText>
        <label>Sales Target Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Visitation Plan Setup</label>
    <listViews>
        <fullName>All_VN_Visitation_Plan_Setup</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_VN_Sales_Target_Factor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Visitation_Plan_Setup__c.ASI_CRM_VN_Visitation_Plan_Setup</value>
        </filters>
        <label>All VN Visitation Plan Setup</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>User Group</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visitation Plan Setups</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_Visitation_Plan_Setup</fullName>
        <active>true</active>
        <label>ASI CRM VN Visitation Plan Setup</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>